# PerlinNoise-Kernel

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Definitions.h  Kernels.cu  Main.cpp  Main.cu  PerlinNoise.sln  PerlinNoise.vcxproj  PerlinNoise.vcxproj.filters  README.md  Shader.cpp  Shader.fs  Shader.h  Shader.vs  fragmentShader1D.fs  fragmentShader2D.fs  imgui.ini  kernel.cu  vertexShader1D_linear.vs  vertexShader2D.vs
CUDAKernels/: Fundamental.cu  Kernels.cuh  PreInitialize.cu
Entities/: Plot.hpp
Entities/Interfaces/: ICalculable.hpp  IDrawable.hpp
Shaders/: Shader.hpp
Shaders/1D/: 1D.frag  1D_white.vert
Wrappers/CUDA/: ErrorException.cpp  ErrorException.hpp
cmake/: PNKConfig.cmake.in
dependencies/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/PNK/: Perlin.cuh
include/pnk/: Params.hpp  Perlin.cuh
src/: CMakeLists.txt  Fundamental.cuh  Kernels.cuh  Main.cpp  Params.hpp  Perlin.cu  Perlin.cuh
src/CUDAKernels/: CMakeLists.txt  Kernels.cu  PreInitialize.cuh
src/Entities/: Background.cpp  Background.hpp  CMakeLists.txt  GUI.cpp  GUI.hpp  Perlin.cpp  Perlin.hpp  Plot.cpp
src/Entities/Interfaces/: IDrawable.cpp
src/Services/: CMakeLists.txt  Definitions.hpp  Params.cpp  Params.hpp  Window.cpp  Window.hpp
src/Shaders/: CMakeLists.txt  Shader.cpp
src/Shaders/1D/: 1D.vert  1D_noise.vert
src/Wrappers/CUDA/: CMakeLists.txt  MyLittleCUDAWrapper.cu  MyLittleCUDAWrapper.cuh
